welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:13: error: not found: value getColorSol
  while (!estSurBiscuit() && getColorSol()!=Color.green){
                             ^