welcome.lessons.welcome.summative.Moria.scala.code
while(estDosMur()!=true){
  while(!estDosMur() && !estSurBiscuit()){
    recule()
  }
  if (estSurBiscuit()){
    prendBiscuit()
  }
  if (estDosMur()){
    gauche()
    avance()
    gauche()
  }
  while (!estSurBiscuit() && getColorSol()!=Color.green){
    avance()
  }
  recule()
  if(porteBiscuit() && !estSurBiscuit()){
    poseBiscuit()
  }
  recule()
}